# taskl

./: README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: index.html  search.js  taskl.html
docs/taskl/: exceptions.html  task.html  tasknote.html  taskwarrior.html
taskl/: __init__.py  exceptions.py  task.py  taskwarrior.py  utils.py
taskl/task/: __init__.py  task.py  tasknote.py
tests/: add_task.py  get_projects.py  get_tasks.py
